--- a/index.html
+++ b/index.html
@@ -17,23 +17,25 @@
                 <li>
                     <a href="#home">Home</a>
                 </li>
-                <li>About Me
-
+                <li>
+                    <a href="#about-me">About Me</a>
                 </li>
-                <li>Work
-
+                <li>
+                    <a href="#work">Work</a>
                 </li>
-                <li>Contact M
-                    e</li>
+                <li>
+                    <a href="#contact-me">Contact Me</a>
+                </li>
                 
             </ul>
         </nav>
     </header>
 
     <body>
+        <img src="./assets/images/frog.jpeg" alt="frog picture">
         <section>
-            <article>
-                <img src="" alt="">
+            <article>    
+                
             </article>
         </section>
         <script src="./assets/script.js"></script>
