first draft (add basic html and css)

--- a/index.html
+++ b/index.html
@@ -30,14 +30,42 @@
             </ul>
         </nav>
     </header>
-
     <body>
-        <img src="./assets/images/frog.jpeg" alt="frog picture">
-        <section>
-            <article>    
-                
-            </article>
-        </section>
-        <script src="./assets/script.js"></script>
+        <div class="me">
+            <div class="left">
+                <h2 class="intro">My name is Alex</h2>
+            </div>
+            <div class="right">
+                <img src="./assets/images/me.jpg" alt="My Picture">
+            </div>
+        </div>
+        <div class="projects">
+            <section class="card">
+              <header>Project 1</header>
+              <img src="./assets/images/tbd.jpeg" alt="project 1" />
+            </section>
+            <section class="card">
+              <header>Project 2</header>
+              <img src="./assets/images/tbd.jpeg" alt="project 2" />
+            </section>
+            <section class="card">
+              <header>Project 3</header>
+              <img src="./assets/images/tbd.jpeg" alt="project 3"/>
+            </section>
+            <section class="card">
+              <header>Project 4</header>
+              <img src="./assets/images/tbd.jpeg" alt="project 4" />
+            </section>
+        </div>
     </body>
+
+    <footer>
+        <h3>Contact Info</h3>
+        <ul>
+            <li>
+                <a href="https://github.com/santos-al">My Github</a>
+            </li>
+        </ul>
+    </footer>
+    <script src="./assets/script.js"></script>
 </html>
