added border to navbar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         
     </head>
 
-    <header>
+    <header class="nav">
         <h1 class="title">Hello There!</h1>
         <nav class="navbar">
             <ul>
