add project images

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 
     <header class="nav">
-        <h1 class="title">Hello There!</h1>
+        <h1 class="title">Alexandre's Portfolio</h1>
         <nav class="navbar">
             <ul>
                 <li>
@@ -33,29 +33,32 @@
     <body>
         <div class="me">
             <div class="left">
-                <h2 class="intro">My name is Alex</h2>
+                <h2 class="intro">Hello There! </h2>
             </div>
             <div class="right">
                 <img src="./assets/images/me.jpg" alt="My Picture">
             </div>
         </div>
-        <div class="projects">
+        <div id="work" class="projects">
             <section class="card">
-              <header>Project 1</header>
-              <img src="./assets/images/tbd.jpeg" alt="project 1" />
+              <header>Watch Party</header>
+              <img src="./assets/images/watch-party.png" alt="project 1" />
             </section>
             <section class="card">
-              <header>Project 2</header>
-              <img src="./assets/images/tbd.jpeg" alt="project 2" />
+              <header>JabberyWocky</header>
+              <img src="./assets/images/jabberwocky.png" alt="project 2" />
             </section>
             <section class="card">
               <header>Project 3</header>
               <img src="./assets/images/tbd.jpeg" alt="project 3"/>
             </section>
-            <section class="card">
+            <!-- <section class="card">
               <header>Project 4</header>
               <img src="./assets/images/tbd.jpeg" alt="project 4" />
-            </section>
+            </section> -->
+        </div>
+        <div>
+            
         </div>
     </body>
 
