make nav fixed and footer at bottom

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
     </body>
 
-    <footer>
+    <footer id="contact-me">
         <h3>Contact Info</h3>
         <ul>
             <li>
