--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </nav>
     </header>
     <body>
+        <div id="home">
         <div id="about-me" class="me">
             <div class="left">
                 <h2 class="intro">
@@ -41,6 +42,7 @@
             <div class="right">
                 <img src="./assets/images/me.jpg" alt="My Picture">
             </div>
+        </div>
         </div>
         <div id="work" class="projects">
             <section class="card">
