--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="left">
                 <h2 class="intro">
                     Hello There! Welcome to my virtual resume. 
-                    Here you will find all my projects. 
+                    Here you can find all my projects. 
                 </h2>
             </div>
             <div class="right">
@@ -46,7 +46,7 @@
         </div>
         <div id="work" class="projects">
             <section class="card">
-              <a href="#watch-party">Watch Party</a>
+              <a href="#work">Watch Party</a>
               <img src="./assets/images/watch-party.png" alt="project 1" />
             </section>
             <section class="card">
@@ -63,14 +63,18 @@
             </section> -->
         </div>
         <main>
-            <section id="watch-party" class="project-description">
+            <!-- id's for the main section are used to link the project cards to the description. 
+                They are offset by one section to adjust for the floating nav bar (looks weird, but works for now) -->
+            <div id="jabberwocky">
+            <section class="project-description">
                 <img src="./assets/images/film-light.png" alt="Notebook with search engine optimization concepts on cover on a cluttered wooden table." class="float-left" />
                 <h2>Watch Party</h2>
                 <p>
                     DESCRIPTION
                 </p>
             </section>
-            <section id="jabberwocky" class="project-description">
+            </div>
+            <section class="project-description">
                 <img src="./assets/images/book-light.png" alt="Person checking cell phone while looking at a laptop showing a graph of increasing online reputation." class="float-right" />
                 <h2>JabberyWocky</h2>
                 <p>
