--- a/index.html
+++ b/index.html
@@ -67,25 +67,35 @@
                 They are offset by one section to adjust for the floating nav bar (looks weird, but works for now) -->
             <div id="jabberwocky">
             <section class="project-description">
-                <img src="./assets/images/film-light.png" alt="Notebook with search engine optimization concepts on cover on a cluttered wooden table." class="float-left" />
+                <img src="./assets/images/film-light.png" alt="film reel icon" class="float-left" />
                 <h2>Watch Party</h2>
                 <p>
-                    DESCRIPTION
+                    This app, developed by me and a team of four other people caters to movie lovers.
+                    Watch party makes it easier for movie lovers to pick their next movie. Using the youtube and OMDB APIs we
+                    were able to create a single page with all the info you need to help pick your next movie. The OMDB API allows us to pull
+                    various types of information regaring any movie. Things such as runtime, cast, and descriptions all the way to movie reviews
+                    from the most credible movie reviewers. By combining this with the youtube API users can read about a movies description and reviews
+                    and watch the trailer, all with one quick search.
                 </p>
             </section>
             </div>
             <section class="project-description">
-                <img src="./assets/images/book-light.png" alt="Person checking cell phone while looking at a laptop showing a graph of increasing online reputation." class="float-right" />
+                <img src="./assets/images/book-light.png" alt="book icon" class="float-right" />
                 <h2>JabberyWocky</h2>
                 <p>
-                    DESCRIPTION
+                    This app is catered to book worms who love share their reads with others. JabberWocky is a social media platform for books lovers.
+                    Users can sign up and create an account. By creating an account users are offered a variety of features. They can explore the home page,
+                    which consists of other users latest reviews on books. They can also interact with these reviews by leaving comments. On their 
+                    profile page they can create a reading list. On their profile page they will also find the reviews they posted. They can also leave their own reviewer
+                    by leaving a comment and a star rating. If they are unsure about a certain book they can utilize the search bar to see if any has left a reviewer
+                    on a particular book.
                 </p>
             </section>
             <section id="project" class="project-description">
-                <img src="./assets/images/coming-soon.png" alt="Large solar panels in a green field of plants with a blue sky and light white clouds above it." class="float-left" />
+                <img src="./assets/images/coming-soon.png" alt="coming soon sign" class="float-left" />
                 <h2>Project 3</h2>
                 <p>
-                    DESCRIPTION
+                    Coming Soon
                 </p>
             </section>
         </main>
