make github link open in a new tab

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <a href="#">santosal2018@gmail.com</a>
             </li>
             <li>
-                <a href="https://github.com/santos-al">My Github</a>
+                <a href="https://github.com/santos-al" target="_blank" rel="noopener noreferrer">My Github</a>
             </li>
         </ul>
     </footer>
