add comments, fix picture issue and add readme

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </h2>
             </div>
             <div class="right">
-                <img src="./assets/images/me.jpg" alt="My Picture">
+                <img src="./assets/images/me.png" alt="My Picture">
             </div>
         </div>
         </div>
