--- a/index.html
+++ b/index.html
@@ -92,10 +92,15 @@
                 </p>
             </section>
             <section id="project" class="project-description">
-                <img src="./assets/images/coming-soon.png" alt="coming soon sign" class="float-left" />
-                <h2>Project 3</h2>
+                <img src="./assets/images/strong.png" alt="strong emoji" class="float-left" />
+                <h2>Body and Mind</h2>
                 <p>
-                    Coming Soon
+                    This app was created to connect people who are interested in becoming 
+                    the best version of themsleves. Body and Mind, inspired by the Warrior Monk Mentality
+                    is a social media application. On this app you will find inspiring posts about excersie and mental health
+                    posted by fellow users. We hope to provide a community where users can connect, share experiences and motive each other
+                    along the path to wellness.
+                
                 </p>
             </section>
         </main>
