--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </section>
             <section class="card">
                 <a href="#project">Project 3</a>
-              <img src="./assets/images/tbd.jpeg" alt="project 3"/>
+              <img src="./assets/images/strong.png" alt="project 3"/>
             </section>
         </div>
         <main>
