add body and mind

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </section>
             <section class="card">
                 <a href="#project">Project 3</a>
-              <img src="./assets/images/strong.png" alt="project 3"/>
+              <img src="./assets/images/bodymind.png" alt="project 3"/>
             </section>
         </div>
         <main>
@@ -100,7 +100,6 @@
                     is a social media application. On this app you will find inspiring posts about excersie and mental health
                     posted by fellow users. We hope to provide a community where users can connect, share experiences and motive each other
                     along the path to wellness.
-                
                 </p>
             </section>
         </main>
